Development session (2026-07-11): Improvements on Group managment
